Repaired most of the endpoints