@@ -4,39 +4,33 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.persistence.AttributeConverter;
 import jakarta.persistence.Converter;
-
-import java.util.ArrayList;
 import java.util.Collections;
-import net.blueshell.api.model.FormAnswer;
-
 import java.util.List;
 
 @Converter
 public class FormAnswerListConverter implements AttributeConverter<List<Object>, String> {
-
-    private final ObjectMapper objectMapper = new ObjectMapper();
+    private static final ObjectMapper mapper = new ObjectMapper();
+    private static final TypeReference<List<Object>> TYPE_REF = new TypeReference<>() {};
 
     @Override
     public String convertToDatabaseColumn(List<Object> attribute) {
-        if (attribute == null || attribute.isEmpty()) {
-            return null;
-        }
+        if (attribute == null) return null;
         try {
-            return objectMapper.writeValueAsString(attribute);
+            return mapper.writeValueAsString(attribute);
         } catch (Exception e) {
-            throw new RuntimeException("JSON conversion error when writing FormAnswer list", e);
+            throw new IllegalArgumentException("Could not convert list to JSON", e);
         }
     }
 
     @Override
     public List<Object> convertToEntityAttribute(String dbData) {
-        if (dbData == null || dbData.isBlank()) {
-            return new ArrayList<>();
+        if (dbData == null || dbData.trim().isEmpty()) {
+            return Collections.emptyList();
         }
         try {
-            return objectMapper.readValue(dbData, new TypeReference<List<Object>>() {});
+            return mapper.readValue(dbData, TYPE_REF);
         } catch (Exception e) {
-            throw new RuntimeException("JSON conversion error when reading FormAnswer list", e);
+            throw new IllegalArgumentException("Could not convert JSON to list", e);
         }
     }
 }
